--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       var x = document.getElementById("topnav");
       if (x.className === "topnav") {
         x.className += " responsive";
-        console.log(x);
+        x.console.log(x);
       } else {
         x.className = "topnav";
       }
